--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-camera": "^1.4.3",
-    "react-navigation": "^2.18.3"
+    "react-navigation": "^2.18.3",
+    "tcomb-form-native": "^0.6.20"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
