--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-camera": "^1.4.3",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-masked-text": "^1.9.2",
+    "react-native-radio-buttons-group": "^1.0.7",
     "react-navigation": "^2.18.3",
     "tcomb-form-native": "^0.6.20"
   },
