--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-camera": "^1.4.3",
+    "react-native-dialog": "^5.5.0",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-masked-text": "^1.9.2",
     "react-native-radio-buttons-group": "^1.0.7",
+    "react-native-tableview": "^2.4.1",
     "react-navigation": "^2.18.3",
     "tcomb-form-native": "^0.6.20"
   },
